Bug 110002 - Sidebar shows 2 as font height for some specific Impress tables cells
Summary: Sidebar shows 2 as font height for some specific Impress tables cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Sidebar-Properties Fonts-Size-Combobox
  Show dependency treegraph
 
Reported: 2017-07-29 12:59 UTC by Tamás Zolnai
Modified: 2021-05-30 02:31 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-07-29 12:59:23 UTC
Description:
Sidebar fontheight field sometimes filled with the value 2 which shows it did not get the real font height value (2 seems to be a dummy a value). I experience this problem with such Impress tables which have different font height set in different cells.

Steps to Reproduce:
1. Open Impress
2. Create a table at least one cell
3. Change one cell's font height with sidebar fontheight field
4. Click in other cells with the mouse (other cells should have the default 18 font height

Actual Results:  
Sidebar's font height field shows sometimes 2 instead of the actual font height value.

Expected Results:
Sidebar's should show always the actual value.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36
Comment 1 Tamás Zolnai 2017-07-29 13:00:27 UTC
> Steps to Reproduce:
> 1. Open Impress
> 2. Create a table at least one cell

Typo: At least with two cells is needed here.
Comment 2 Commit Notification 2017-10-27 21:24:16 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e142027a26634f51b0fc0903076f980d4a37496a

tdf#110002: Sidebar shows 2 as font height for some specific...

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.