tdf#110002: Sidebar shows 2 as font height for some specific...

... Impress tables cells

While clicking inside a table we can avoid to unmark and
remark the corresponding table. This unneccessary
unmark\remark operations trigger a lot of useless updating
stuff.
For example it regenerate the whole sidebar while we still in
the table so the sidebar's context did not actually change.

Change-Id: I4c56b87b032e3cced3f09801147784dd2baaf9ef